[package]
name = "polycalc"
version = "0.1.0"
authors = ["Artemis21 <artemisdev21@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rocket = "0.4.7"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
